--- a/src/main/resources/templates/tourinfo/area.html
+++ b/src/main/resources/templates/tourinfo/area.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
     <!--css-->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/style.css?after" rel="stylesheet" />
-    <link href="assets/css/commonstyle.css" rel="stylesheet" />
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../assets/css/style.css?after" rel="stylesheet" />
+    <link href="../../assets/css/commonstyle.css" rel="stylesheet" />
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <title>관광지 정보 | 3GO</title>
@@ -36,77 +36,77 @@
         }
 
         .b1 {
-            background: url("assets/img/mainimg/seoul.jpeg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/mainimg/seoul.jpeg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b2 {
-            background: url("assets/img/subimg/busan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/busan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b3 {
-            background: url("assets/img/subimg/jeju.jpg") 50% 80% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/jeju.jpg") 50% 80% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b4 {
-            background: url("assets/img/subimg/daejeon.jpg") 50%  no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/daejeon.jpg") 50%  no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b5 {
-            background: url("assets/img/subimg/daegu.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/daegu.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b6 {
-            background: url("assets/img/subimg/gyunggi.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/gyunggi.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b7 {
-            background: url("assets/img/subimg/gwangju.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/gwangju.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b8 {
-            background: url("assets/img/subimg/gangwon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/gangwon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b9 {
-            background: url("assets/img/subimg/ulsan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/ulsan.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b10 {
-            background: url("assets/img/mainimg/incheon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/mainimg/incheon.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b11 {
-            background: url("assets/img/mainimg/sejong.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/mainimg/sejong.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
         }
         .b12 {
-            background: url("assets/img/subimg/chungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/chungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b13 {
-            background: url("assets/img/subimg/chungnam.jpg") 50% 70% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/chungnam.jpg") 50% 70% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b14 {
-            background: url("assets/img/subimg/gyungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/gyungbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b15 {
-            background: url("assets/img/subimg/gyungnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/gyungnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b16 {
-            background: url("assets/img/subimg/jeonbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/jeonbuk.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
         .b17 {
-            background: url("assets/img/subimg/jeonnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+            background: url("../../assets/img/subimg/jeonnam.jpg") 50% no-repeat,linear-gradient(0deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
             background-blend-mode: multiply;
             background-size: 500px;
         }
@@ -139,7 +139,7 @@
 </head>
 <body>
 <!-- header-->
-<th:block th:replace="fragments/header"></th:block>
+<th:block th:replace="~{fragments/header}"></th:block>
 
 
 <div class="sub-header">
@@ -274,7 +274,7 @@
     </div>
 </div>
 <!--footer-->
-<th:block th:replace="fragments/footer"></th:block>
+<th:block th:replace="~{fragments/footer}"></th:block>
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
