--- a/src/main/resources/templates/tourinfo/area.html
+++ b/src/main/resources/templates/tourinfo/area.html
@@ -155,7 +155,7 @@
         <!--           <table border="1" width="70%" align="center"> -->
         <!--                <c:forEach items="${areaList}" var="area" varStatus="idx">--%>
             <%--                    <c:if test="${idx.index % 3 == 0}"><tr></c:if>--%>
-            <%--                    <td><a href="../info/city.do?area=${area.j_areacode}">${area.j_area_name}</a></td>--%>
+            <%--                    <td><a href="../info/city/${area.j_areacode}">${area.j_area_name}</a></td>--%>
             <%--                    <c:if test="${idx.index % 3 == 2}"></tr></c:if>--%>
             <%--                </c:forEach>--%>
         <%--            </table>-->
@@ -165,31 +165,31 @@
         <div class="main mt-5">
 
             <div class="main_card b1">
-                <a href="../info/city.do?area=1">
+                <a href="../info/city/1">
                     <div class="main_bar">서울</div>
                 </a>
             </div>
 
             <div class="main_card b2">
-                <a href="../info/city.do?area=6">
+                <a href="../info/city/6">
                     <div class="main_bar">부산</div>
                 </a>
             </div>
 
             <div class="main_card b3">
-                <a href="../info/city.do?area=39">
+                <a href="../info/city/39">
                     <div class="main_bar">제주</div>
                 </a>
             </div>
 
             <div class="main_card b4">
-                <a href="../info/city.do?area=3">
+                <a href="../info/city/3">
                     <div class="main_bar">대전</div>
                 </a>
             </div>
 
             <div class="main_card b5">
-                <a href="../info/city.do?area=4">
+                <a href="../info/city/4">
                     <div class="main_bar">대구</div>
                 </a>
             </div>
@@ -197,37 +197,37 @@
 
         <div class="main mt-3">
             <div class="main_card b6">
-                <a href="../info/city.do?area=9">
+                <a href="../info/city/9">
                     <div class="main_bar">경기도</div>
                 </a>
             </div>
 
             <div class="main_card b7">
-                <a href="../info/city.do?area=5">
+                <a href="../info/city/5">
                     <div class="main_bar">광주</div>
                 </a>
             </div>
 
             <div class="main_card b8">
-                <a href="../info/city.do?area=32">
+                <a href="../info/city/32">
                     <div class="main_bar">강원도</div>
                 </a>
             </div>
 
             <div class="main_card b9">
-                <a href="../info/city.do?area=7">
+                <a href="../info/city/7">
                     <div class="main_bar">울산</div>
                 </a>
             </div>
 
             <div class="main_card b10">
-                <a href="../info/city.do?area=2">
+                <a href="../info/city/2">
                     <div class="main_bar">인천</div>
                 </a>
             </div>
 
             <div class="main_card b11">
-                <a href="../info/city.do?area=8">
+                <a href="../info/city/8">
                     <div class="main_bar">세종</div>
                 </a>
             </div>
@@ -235,37 +235,37 @@
 
         <div class="main mt-3">
             <div class="main_card b12">
-                <a href="../info/city.do?area=33">
+                <a href="../info/city/33">
                     <div class="main_bar">충북</div>
                 </a>
             </div>
 
             <div class="main_card b13">
-                <a href="../info/city.do?area=34">
+                <a href="../info/city/34">
                     <div class="main_bar">충남</div>
                 </a>
             </div>
 
             <div class="main_card b14">
-                <a href="../info/city.do?area=35">
+                <a href="../info/city/35">
                     <div class="main_bar">경북</div>
                 </a>
             </div>
 
             <div class="main_card b15">
-                <a href="../info/city.do?area=36">
+                <a href="../info/city/36">
                     <div class="main_bar">경남</div>
                 </a>
             </div>
 
             <div class="main_card b16">
-                <a href="../info/city.do?area=37">
+                <a href="../info/city/37">
                     <div class="main_bar">전북</div>
                 </a>
             </div>
 
             <div class="main_card b17">
-                <a href="../info/city.do?area=38">
+                <a href="../info/city/38">
                     <div class="main_bar">전남</div>
                 </a>
             </div>
