--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -2,14 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
     <!-- Bootstrap icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css" type="text/css" />
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)-->
+    <!--css-->
     <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../../assets/css/style.css?after" rel="stylesheet" />
-    <link href="../../common/commonstyle.css?after" rel="stylesheet" />
+    <link href="../../assets/css/commonstyle.css" rel="stylesheet" />
+    <!--jquery-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- toast grid -->
     <script type="text/javascript" src="https://uicdn.toast.com/tui.pagination/latest/tui-pagination.js"></script>
@@ -21,17 +23,23 @@
 
         $(document).ready(function (){
             checkCategory();
-            showList();
-            search();
+            // showList();
+            // search();
             $("#morebtn").click(function() {
                 $(".invisiblecard").slideToggle(300);
             });
         })
 
         function checkCategory(){
-            let url = '/info/city.do'
+            let cat1 = $('input[name=cat1]:checked').val();
+            let url = `/info/cat/{${cat1}}`;
 
-            // 카테고리(분류) 선택
+            $('.catSelect').click(function (){
+                console.log("cat1: " + cat1);
+                console.log("url: " + url);
+            })
+
+            /*// 카테고리(분류) 선택
             $('.catSelect').click(function (){
                 $.ajax({
                     url : url,
@@ -103,90 +111,90 @@
                         }
                     }
                 })
-            })
+            })*/
         }
 
-        function showList(){
-            $('#gridDiv').html("");
-
-            const dataSource = {
-                contentType: 'application/json; charset=UTF-8',
-                api: {
-                    readData: {
-                        url: '/tour_list.do',
-                        method: 'GET',
-                        initParams: {
-                            area : $('input[name=area]').val(),
-                            sigungu : $('input[name=sigungu]:checked').val(),
-                            cat1 : $('input[name=cat1]:checked').val(),
-                            cat2 : $('input[name=cat2]:checked').val(),
-                            cat3 : $('input[name=cat3]:checked').val(),
-                            type : $('input[name=type]:checked').val()
-                        }
-                    }
-                }
-            };
-
-            const Grid = tui.Grid;
-            Grid.applyTheme('clean',{
-                cell: {
-                    normal: {
-                        background: '#fff',
-                        border: '#e0e0e0',
-                        showVerticalBorder: false,
-                        showHorizontalBorder: true
-                    },
-                    header: {
-                        background: '#fff',
-                        border: '#e0e0e0',
-                        showVerticalBorder: false,
-                        showHorizontalBorder: true
-                    },
-                    selectedHeader: {
-                        background: '#e0e0e0'
-                    }
-                }
-            });
-
-            var grid = new Grid({
-                el : document.getElementById('gridDiv'),
-                data : dataSource,
-                scrollX : false,
-                scrollY : false,
-                rowHeight : 120,
-                rowHeaders: [{type: 'rowNum', width: 50}],
-
-                columns : [
-                    {
-                        header : '사진',
-                        name : 'firstimage',
-                        renderer: {
-                            styles: {
-                                textAlign: 'center'
-                            },
-                        },
-                        width : 200
-                    },
-                    {
-                        header : '관광정보',
-                        name : 'content',
-                    }
-                ],
-
-                pageOptions: {
-                    useClient: true,	// front에서만 페이징 하는 속성
-                    perPage: 10
-                }
-
-            });
-        }
-
-        function search(){
-            // 조회
-            $('button[name=searchBtn]').click(function (){
-                showList();
-            })
-        }
+        // function showList(){
+        //     $('#gridDiv').html("");
+        //
+        //     const dataSource = {
+        //         contentType: 'application/json; charset=UTF-8',
+        //         api: {
+        //             readData: {
+        //                 url: '/tour_list.do',
+        //                 method: 'GET',
+        //                 initParams: {
+        //                     area : $('input[name=area]').val(),
+        //                     sigungu : $('input[name=sigungu]:checked').val(),
+        //                     cat1 : $('input[name=cat1]:checked').val(),
+        //                     cat2 : $('input[name=cat2]:checked').val(),
+        //                     cat3 : $('input[name=cat3]:checked').val(),
+        //                     type : $('input[name=type]:checked').val()
+        //                 }
+        //             }
+        //         }
+        //     };
+        //
+        //     const Grid = tui.Grid;
+        //     Grid.applyTheme('clean',{
+        //         cell: {
+        //             normal: {
+        //                 background: '#fff',
+        //                 border: '#e0e0e0',
+        //                 showVerticalBorder: false,
+        //                 showHorizontalBorder: true
+        //             },
+        //             header: {
+        //                 background: '#fff',
+        //                 border: '#e0e0e0',
+        //                 showVerticalBorder: false,
+        //                 showHorizontalBorder: true
+        //             },
+        //             selectedHeader: {
+        //                 background: '#e0e0e0'
+        //             }
+        //         }
+        //     });
+        //
+        //     var grid = new Grid({
+        //         el : document.getElementById('gridDiv'),
+        //         data : dataSource,
+        //         scrollX : false,
+        //         scrollY : false,
+        //         rowHeight : 120,
+        //         rowHeaders: [{type: 'rowNum', width: 50}],
+        //
+        //         columns : [
+        //             {
+        //                 header : '사진',
+        //                 name : 'firstimage',
+        //                 renderer: {
+        //                     styles: {
+        //                         textAlign: 'center'
+        //                     },
+        //                 },
+        //                 width : 200
+        //             },
+        //             {
+        //                 header : '관광정보',
+        //                 name : 'content',
+        //             }
+        //         ],
+        //
+        //         pageOptions: {
+        //             useClient: true,	// front에서만 페이징 하는 속성
+        //             perPage: 10
+        //         }
+        //
+        //     });
+        // }
+        //
+        // function search(){
+        //     // 조회
+        //     $('button[name=searchBtn]').click(function (){
+        //         showList();
+        //     })
+        // }
 
     </script>
     <style>
@@ -301,41 +309,50 @@
 <th:block th:replace="~{fragments/header}"></th:block>
 <div id="wrap">
     <div class="flex-box">
-        <h2 id="areaName">${areaName}</h2>
+        <h2 id="areaName" th:text="${selectedArea.areaName}"></h2>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-2 btn-primary2 btn-select-area " id="morebtn" >지역선택</button>
     </div>
     <div id="area-list-box" class = "invisiblecard">
-        <c:forEach items="${areaList}" var="area" varStatus="idx">
-            <input type="radio" class="areaSelect btn-check" name="areaSelect" id="area${idx.count}" autocomplete="off"
-                   value="${area.j_areacode}" <c:if test="${param.area eq area.j_areacode}"> checked</c:if>>
-            <label class="btn btn-3 btn-area" for="area${idx.count}"><a href="/info/city.do?area=${area.j_areacode}">#${area.j_area_name}</a></label>
-        </c:forEach>
+        <div class="d-flex flex-wrap">
+            <div th:each="area, idx : ${areaList}">
+                <input type="radio" class="areaSelect btn-check" name="areaSelect" th:id="|area${idx.count}|" autocomplete="off"
+                       th:value="${area.areaCode}" th:checked="${selectedArea.areaCode == area.areaCode}">
+                <label class="btn btn-3 btn-area" th:for="|area${idx.count}|"><a th:href="@{/info/city/{areaCode}(areaCode = ${area.areaCode})}" th:text="|${area.areaName}|"></a></label>
+            </div>
+        </div>
     </div>
     <div id="content_container">
-        <%-- 리스트 --%>
-        <div id="gridDiv"></div>
-        <%-- 카테고리 셀렉터 --%>
+        <!--리스트-->
+<!--        <div id="gridDiv"></div>-->
+        <!--카테고리 셀렉터-->
         <div id="tagSelector">
             <div id="content_type">
                 <h5>- 관광 타입 -</h5>
-                <input type="radio" class="typeSelect btn-check" name="type" id="type0" autocomplete="off" value="" checked>
-                <label class="btn btn-2" for="type0">#전체</label>
-                <c:forEach items="${c_typeList}" var="type" varStatus="idx">
-                    <input type="radio" class="typeSelect btn-check" name="type" id="type${idx.count}" autocomplete="off" value="${type.contenttypeid}">
-                    <label class="btn btn-2" for="type${idx.count}">#${type.ctype_name}</label>
-                </c:forEach>
-                <br/>
+                <div class="d-flex flex-wrap">
+                    <div>
+                        <input type="radio" class="typeSelect btn-check" name="type" id="type0" autocomplete="off" value="" checked>
+                        <label class="btn btn-2" for="type0" th:text="전체"></label>
+                    </div>
+                    <div th:each="type, idx : ${contentTypeList}">
+                        <input type="radio" class="typeSelect btn-check" name="type" th:id="|type${idx.count}|" autocomplete="off" th:value="${type.contentTypeId}">
+                        <label class="btn btn-2" th:for="|type${idx.count}|" th:text="${type.contentTypeName}"></label>
+                    </div>
+                </div>
             </div>
             <div id="category">
-                <input type="hidden" name="area" value="${param.area}">
+<!--                <input type="hidden" name="area" value="${param.area}">-->
                 <h5>- 대분류 -</h5>
-                <input type="radio" class="catSelect btn-check" name="cat1" id="cat10" autocomplete="off" value="" checked>
-                <label class="btn btn-2" for="cat10">#전체</label>
-                <c:forEach items="${cat1List}" var="cat1" varStatus="idx">
-                    <input type="radio" class="catSelect btn-check" name="cat1" id="cat1${idx.count}" autocomplete="off" value="${cat1.cat1}">
-                    <label class="btn btn-2" for="cat1${idx.count}">#${cat1.cat1_name}</label>
-                </c:forEach>
+                <div class="d-flex flex-wrap">
+                    <div>
+                        <input type="radio" class="catSelect btn-check" name="cat1" id="cat10" autocomplete="off" value="" checked>
+                        <label class="btn btn-2" for="cat10" th:text="전체"></label>
+                    </div>
+                    <div th:each="cat1, idx : ${cat1List}">
+                        <input type="radio" class="catSelect btn-check" name="cat1" th:id="|cat1${idx.count}|" autocomplete="off" th:value="${cat1.cat1}">
+                        <label class="btn btn-2" th:for="|cat1${idx.count}|" th:text="${cat1.cat1Name}"></label>
+                    </div>
+                </div>
                 <br/>
                 <div id="cat2Label"></div>
                 <div id="cat2"></div>
@@ -344,12 +361,16 @@
             </div>
             <div id="sigungu">
                 <h5>- 상세 지역 -</h5>
-                <input type="radio" class="areaSelect btn-check" name="sigungu" id="sigungu0" autocomplete="off" value="" checked>
-                <label class="btn btn-2" for="sigungu0">#전체</label>
-                <c:forEach items="${sigunguList}" var="sigungu" varStatus="idx">
-                    <input type="radio" class="areaSelect btn-check" name="sigungu" id="sigungu${idx.count}" autocomplete="off" value="${sigungu.s_sigungucode}">
-                    <label class="btn btn-2" for="sigungu${idx.count}">#${sigungu.sigungu_name}</label>
-                </c:forEach>
+                <div class="d-flex flex-wrap">
+                    <div>
+                        <input type="radio" class="areaSelect btn-check" name="sigungu" id="sigungu0" autocomplete="off" value="" checked>
+                        <label class="btn btn-2" for="sigungu0" th:text="전체"></label>
+                    </div>
+                    <div th:each="sigungu, idx : ${sigunguList}">
+                        <input type="radio" class="areaSelect btn-check" name="sigungu" th:id="|sigungu${idx.count}|" autocomplete="off" th:value="${sigungu.sigunguCode}">
+                        <label class="btn btn-2" th:for="|sigungu${idx.count}|" th:text="${sigungu.sigunguName}"></label>
+                    </div>
+                </div>
             </div>
             <div class="d-grid">
                 <button class="btn btn-2 search-btn" type="button" name="searchBtn">검색</button>
